# log4k

./: .gitignore  CMakeLists.txt  Findlog4k.cmake.in  backup_cmake_in  library.h  test_main.cpp
interface/: logger_interface.c  logger_interface.h
src/: CMakeLists.txt  Logger.cpp  Logger.h  Logger.hpp  logger.cpp  logger.hpp  logger_interface.c  logger_interface.cpp  logger_interface.h  test.cpp
